==> Asaadkaadan/MOWE/Projects/TR Terminal+Gimbal+IMU/Firmware_TR/Drivers/STM32_MPU6050lib-master/MPU6050.c <==
#include "aos.h"

void MPU6050_I2C_Init(void)
{
  hi2c1.Instance = MPU6050_I2C;
  hi2c1.Init.Timing = 0x2000090E;
  hi2c1.Init.OwnAddress1 = 0;
  hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
  hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLED;
  hi2c1.Init.OwnAddress2 = 0;
  hi2c1.Init.OwnAddress2Masks = I2C_OA2_NOMASK;
  hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLED;
  hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLED;
  HAL_I2C_Init(&hi2c1);

    /**Configure Analogue filter 
    */
  HAL_I2CEx_AnalogFilter_Config(&hi2c1, I2C_ANALOGFILTER_ENABLED);
}

void MPU6050_I2C_ByteWrite(uint8_t slaveAddr, uint8_t* pBuffer, uint8_t writeAddr)
{

	while(HAL_I2C_Mem_Write(&hi2c1, (uint16_t)slaveAddr, (uint16_t)writeAddr, 1, (uint8_t*)pBuffer, TXBUFFERSIZE, 1000)!= HAL_OK) {}
	
}

void MPU6050_I2C_BufferRead(uint8_t slaveAddr, uint8_t* pBuffer, uint8_t readAddr, uint16_t NumByteToRead)
{

	while(HAL_I2C_Mem_Read(&hi2c1, (uint16_t)slaveAddr, (uint16_t)readAddr, 1, (uint8_t*)pBuffer, NumByteToRead, 1000)!= HAL_OK) {}	
		
}
